# kdepim-apps-libs

./: .reviewboardrc  CMakeLists.txt  README.md  kdepim-apps-lib.categories  kdepim-apps-lib.renamecategories  metainfo.yaml
composereditor-ng/: CMakeLists.txt
composereditor-ng/src/: CMakeLists.txt  composereditor.cpp  composereditor.h  composerview.cpp  composerview.h
composereditor-ng/src/extendattributes/: extendattributesbutton.cpp  extendattributesbutton.h  extendattributesdialog.cpp  extendattributesdialog.h  extendattributesutils.cpp  extendattributeswidget.cpp  extendattributeswidget.h
composereditor-ng/src/helper/: listhelper.cpp  tablehelper.cpp
composereditor-ng/src/image/: composerimagedialog.cpp  composerimagedialog.h  composerimageresizetooltip.cpp  composerimageresizetooltip.h
composereditor-ng/src/link/: composeranchordialog.cpp  composeranchordialog.h  composerlinkdialog.cpp  composerlinkdialog.h
composereditor-ng/src/list/: composerlistdialog.cpp  composerlistdialog.h
composereditor-ng/src/pagecolor/: pagecolorbackgrounddialog.cpp  pagecolorbackgrounddialog.h  pagecolorbackgroundwidget.cpp  pagecolorbackgroundwidget.h
composereditor-ng/src/private/: composerview_p.cpp  composerview_p.h
composereditor-ng/src/table/: composercellsizewidget.cpp  composercellsizewidget.h  composertableactionmenu.cpp  composertableactionmenu.h  composertablecellformatdialog.cpp  composertablecellformatdialog.h  composertabledialog.cpp  composertabledialog.h  composertableformatdialog.cpp  composertableformatdialog.h  composertableresizewidget.cpp  composertableresizewidget.h
composereditor-ng/src/widgets/: domtreewidget.cpp  domtreewidget.h  findreplacebar.cpp  findreplacebar.h
composereditor-ng/tests/: composerhtmleditor.cpp
composereditorwebengine/: CMakeLists.txt  KF5ComposerEditorWebEngineConfig.cmake.in
composereditorwebengine/src/: CMakeLists.txt  composerwebengine.cpp  composerwebengine.h  composerwebenginewidget.cpp  composerwebenginewidget.h
composereditorwebengine/src/image/: composerimageresizewidget.cpp  composerimageresizewidget.h
composereditorwebengine/src/link/: composerlinkdialog.cpp
composereditorwebengine/src/private/: composerwebengine_p.cpp  composerwebengine_p.h
composereditorwebengine/src/utils/: composereditorutils.cpp
composereditorwebengine/src/widgets/: findreplacebar.cpp  findreplacebar.h
composereditorwebengine/tests/: CMakeLists.txt  composerhtmleditor.cpp  composerhtmleditor.h  main.cpp
kaddressbookgrantlee/: CMakeLists.txt  KF5KaddressbookGrantleeConfig.cmake.in
kaddressbookgrantlee/src/: CMakeLists.txt
kaddressbookgrantlee/src/contactobject/: contactgrantleeaddressobject.cpp  contactgrantleeaddressobject.h  contactgrantleecryptoobject.cpp  contactgrantleecryptoobject.h  contactgrantleeemail.cpp  contactgrantleeemail.h  contactgrantleegeoobject.cpp  contactgrantleegeoobject.h  contactgrantleeimobject.cpp  contactgrantleeimobject.h  contactgrantleephoneobject.cpp  contactgrantleephoneobject.h  contactgrantleeprintaddressobject.cpp  contactgrantleeprintaddressobject.h  contactgrantleeprintcryptoobject.cpp  contactgrantleeprintemail.cpp  contactgrantleeprintemail.h  contactgrantleeprintgeoobject.cpp  contactgrantleeprintimobject.cpp  contactgrantleeprintimobject.h  contactgrantleeprintphoneobject.cpp  contactgrantleeprintphoneobject.h  contactgrantleeprintwebsite.cpp  contactgrantleeprintwebsite.h  contactgrantleewebsite.cpp  contactgrantleewebsite.h  contactgrantleewrapper.cpp  contactgrantleewrapper.h
kaddressbookgrantlee/src/formatter/: grantleecontactformatter.cpp  grantleecontactformatter.h  grantleecontactgroupformatter.cpp  grantleecontactgroupformatter.h  grantleecontactutils.cpp  grantleecontactutils.h
kaddressbookgrantlee/src/printing/: contactgrantleeprintaddressobject.cpp  contactgrantleeprintaddressobject.h  contactgrantleeprintemail.cpp  contactgrantleeprintemail.h  contactgrantleeprintobject.cpp  contactgrantleeprintobject.h  contactgrantleeprintphoneobject.cpp  contactgrantleeprintphoneobject.h  contactgrantleeprintwebsite.cpp  contactgrantleeprintwebsite.h  grantleeprint.cpp  grantleeprint.h
kaddressbookgrantlee/src/printing/autotests/: CMakeLists.txt  grantleeprinttest.cpp  grantleeprinttest.h
kaddressbookgrantlee/src/widget/: grantleecontactviewer.cpp  grantleecontactviewer.h
kaddressbookimportexport/: CMakeLists.txt  KF5KaddressbookImportExportConfig.cmake.in
kaddressbookimportexport/autotests/: CMakeLists.txt  contactfieldstest.cpp
kaddressbookimportexport/src/: CMakeLists.txt  kaddressbookcontactselectiondialog.cpp  kaddressbookcontactselectiondialog.h  kaddressbookcontactselectionwidget.cpp  kaddressbookcontactselectionwidget.h  kaddressbookexportselectionwidget.cpp  kaddressbookexportselectionwidget.h  kaddressbookimportexportcontactfields.cpp  kaddressbookimportexportcontactfields.h  kaddressbookimportexportcontactlist.cpp  kaddressbookimportexportcontactlist.h  kaddressbookimportexportplugin.cpp  kaddressbookimportexportplugin.h  kaddressbookimportexportplugininterface.cpp  kaddressbookimportexportplugininterface.h  kaddressbookimportexportpluginmanager.cpp  kaddressbookimportexportpluginmanager.h
libfollowupreminder/: CMakeLists.txt
libfollowupreminder/src/: CMakeLists.txt  Messages.sh  followupreminderinfo.cpp  followupreminderinfo.h  followupreminderutil.cpp  followupreminderutil.h
libkdepimdbusinterfaces/: CMakeLists.txt
libkdepimdbusinterfaces/src/: CMakeLists.txt  reminderclient.cpp  reminderclient.h  urihandler.cpp  urihandler.h
libkdepimdbusinterfaces/src/dbusinterfaces/: kmkernel.h
libsendlater/: CMakeLists.txt  KF5SendLaterConfig.cmake.in
libsendlater/src/: CMakeLists.txt  sendlaterdialog.cpp  sendlaterdialog.h  sendlaterinfo.cpp  sendlaterinfo.h  sendlatertimedatewidget.cpp  sendlatertimedatewidget.h  sendlaterutil.cpp  sendlaterutil.h  sendlaterutil_p.h
libsendlater/src/ui/: sendlaterwidget.ui
